--- a/自作その3/css/copy_coding.SCSS.css
+++ b/自作その3/css/copy_coding.SCSS.css
@@ -23,7 +23,10 @@ h1 {
 header {
   grid-area: head;
   display: grid;
-  grid-template: ". ." 100px "My-work head-nav" ". ." 100px "head-img head-img" ". ." 20px;
+  grid-template: "My-work head-nav" "head-img head-img";
+  margin: 100px 0 20px 0;
+  row-gap: 100px;
+  text-align: center;
 }
 
 #head-nav {
@@ -39,19 +42,17 @@ header {
   grid-area: My-work;
   font-size: 30px;
   font-weight: bold;
-  justify-self: center;
 }
 
 nav {
   grid-area: menu;
-  justify-self: center;
-  align-self: center;
   font-size: 20px;
   display: flex;
   gap: 20px;
+  justify-content: center;
+  align-items: center;
 }
-
-#sns {
+nav img {
   width: 20px;
   vertical-align: sub;
 }
@@ -71,8 +72,9 @@ main {
 #About {
   grid-area: About;
   display: grid;
-  grid-template: "." 20px "About-h1" "About-ul" "About-p" "." 20px;
+  grid-template: "About-h1" "About-ul" "About-p";
   row-gap: 20px;
+  margin: 20px 15% 20px 15%;
 }
 #About h1 {
   grid-area: About-h1;
@@ -82,11 +84,8 @@ main {
   list-style: none;
   padding-left: 0;
 }
-#About #first-li {
+#About ul > li {
   margin-bottom: 20px;
-}
-#About p, #About ul {
-  margin: 0 15%;
 }
 #About p {
   grid-area: About-p;
@@ -96,9 +95,9 @@ main {
 #Works {
   grid-area: Works;
   display: grid;
-  grid-template: ". Works-h1 Works-h1 Works-h1 . " ". Works-img1 Works-img2 Works-img3 . " ". Works-img4 Works-img5 Works-img6 . " ". . . . ." 20px/40px auto auto auto 40px;
+  grid-template: "Works-h1 Works-h1 Works-h1" "Works-img1 Works-img2 Works-img3" "Works-img4 Works-img5 Works-img6";
+  margin: auto 40px 20px 40px;
   gap: 20px;
-  justify-items: center;
   padding: 0;
 }
 #Works h1 {
@@ -107,31 +106,36 @@ main {
 #Works img {
   width: 100%;
 }
-#Works #Works-img1 {
+
+#Works-img1 {
   grid-area: Works-img1;
 }
-#Works #Works-img2 {
+
+#Works-img2 {
   grid-area: Works-img2;
 }
-#Works #Works-img3 {
+
+#Works-img3 {
   grid-area: Works-img3;
 }
-#Works #Works-img4 {
+
+#Works-img4 {
   grid-area: Works-img4;
 }
-#Works #Works-img5 {
+
+#Works-img5 {
   grid-area: Works-img5;
 }
-#Works #Works-img6 {
+
+#Works-img6 {
   grid-area: Works-img6;
 }
 
 #News {
   grid-area: News;
   display: grid;
-  grid-template: ". News-h1. " ". News-dl. " ". . ." 20px/40px auto 40px;
-  justify-items: center;
-  align-items: center;
+  grid-template: "News-h1" "News-dl";
+  margin: auto 40px 20px 40px;
   gap: 20px;
 }
 #News h1 {
@@ -158,50 +162,46 @@ main {
 
 #Contact {
   display: grid;
-  grid-template: ". contact-box. " ". . ." 20px/40px auto 40px;
-  justify-items: center;
+  grid-template: "contact-box";
+  margin: auto 40px 20px 40px;
 }
 #Contact div {
   grid-area: contact-box;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   gap: 20px;
+  width: 100%;
 }
 #Contact div h1 {
   width: 100%;
 }
-#Contact div #contact-form {
+#Contact #contact-form {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-content: center;
+  align-items: center;
   gap: 10px;
   margin: 1% 0;
+  width: 100%;
 }
-#Contact div #contact-form .textbox {
+#Contact label {
+  font-weight: bold;
+  width: 10%;
+  align-self: start;
+}
+#Contact .textbox {
   height: 40px;
-  width: 80%;
+  width: 85%;
 }
 #Contact #message-box {
   height: 150px;
-  width: 80%;
+  width: 85%;
 }
-#Contact #submit {
-  width: 100%;
-}
-#Contact #submit button {
+#Contact button {
   font-size: 20px;
   background-color: black;
   color: white;
-  width: 15%;
-}
-#Contact .contact-label, #Contact #contact-label-3 {
-  width: 15%;
-}
-#Contact .contact-label, #Contact #contact-label-3 {
-  font-weight: bold;
+  width: 35%;
 }
 
 footer {
@@ -210,11 +210,14 @@ footer {
 
 @media screen and (max-width: 767px) {
   header {
-    grid-template: ". ." 50px "My-work My-work" ". ." 20px "head-nav head-nav" ". ." 50px "head-img head-img" ". ." 10px;
+    grid-template: "My-work My-work" "head-nav head-nav" "head-img head-img";
+    row-gap: 35px;
+    margin: 50px auto 10px auto;
   }
   #About {
-    grid-template: "." 10px "About-h1" "About-ul" "About-p" "." 10px;
+    grid-template: "About-h1" "About-ul" "About-p";
     row-gap: 10px;
+    margin: 10px auto 10px auto;
   }
   #About ul, #About p {
     margin: 0 5%;
@@ -226,22 +229,21 @@ footer {
     gap: 20px;
   }
   #News {
-    grid-template: ". News-h1. " ". News-dl. " ". . ." 10px/20px auto 20px;
+    grid-template: "News-h1" "News-dl";
     gap: 10px;
+    margin: auto 20px auto 20px;
+    text-align: center;
   }
-  #News .News-dr, #News .News-dt {
+  .News-dr, .News-dt {
     padding: 10px;
   }
-  #News .News-dr {
-    width: 100px;
-    text-align: center;
-  }
   #Contact {
-    grid-template: ". contact-box. " ". . ." 10px/20px auto 20px;
-  }
-  #Contact .contact-label, #Contact #contact-label-3 {
-    width: 50%;
+    grid-template: "contact-box";
+    margin: auto 20px 10px 20px;
     text-align: center;
+  }
+  #Contact label {
+    width: 50%;
   }
   #Contact #submit button {
     width: 20%;
