--- a/自作その3/css/copy_coding.SCSS
+++ b/自作その3/css/copy_coding.SCSS
@@ -70,7 +70,7 @@ main{
   "About"
   "Works"
   "News"
-  "Contact"
+  "Contact";
 }
 
 /*About*/
@@ -169,7 +169,7 @@ h1{
 
 // コンタクト
 #Contact{
-
+  grid-area:Contact;
   display:grid;
   grid-template:
   "contact-box" ;
@@ -219,6 +219,22 @@ h1{
 
 footer{
   grid-area:foot;
+}
+
+#BackToHome{
+  @include flex-df-setting($display:flex,$justify:center,$align-i:center);
+  @include wd-ht-setting(60px,60px);
+  font-size:10px;
+  color:white;
+  border-radius:50%;
+  position:fixed;
+  background-color:skyblue;
+  right:3px;
+  bottom:3px; 
+  text-decoration:none;
+  transition:opacity 0.5s ease;
+  pointer-events:none;
+  opacity:0;
 }
 
 @media screen and(max-width:767px){
@@ -275,10 +291,8 @@ header{
     width:50%;
   }
 
-  #submit{
-    button{
+  #submit button{
     width:20%;
-  }
   }
   
 }
