--- a/自作その４/css/style.SCSS
+++ b/自作その４/css/style.SCSS
@@ -5,10 +5,14 @@ body{
   min-height:100vh;
   display:grid;
   grid-template:
-  ".... .... ...." 30px
+  ".... .... ...." 10px
   "head head head" 
-  "main main main"
-  "foot foot foot";
+  "main main main" 2fr
+  "foot foot foot" ; 
+}
+
+h2{
+  font-size:1.05rem;
 }
 
 header{
@@ -20,7 +24,7 @@ header{
   gap:20px;
 
   > a{
-    font-size:2rem;
+    font-size:1.90rem;
     grid-area:logo;
     text-decoration:none;
     color:black;
@@ -36,7 +40,7 @@ header{
     background-color:#333333;
     padding:10px 0 10px 30px;
     display:flex;
-    gap:20px;
+    gap:1.5rem;
     
     >a{
       color:white;
@@ -50,17 +54,25 @@ header{
 main{
   grid-area:main;
   grid-template:
-  "sec-top sec-top"
-  "sec1    aside  "
-  "sec2    aside  "
-  "sec3    aside  ";
-  margin:30px 50px;
+  "..... .....   .....   ....." 1.5rem
+  "..... sec-top sec-top ....."
+  "..... sec1    aside   ....."
+  "..... sec2    aside   ....."
+  "..... sec3    aside   ....."
+  "..... .....   .....   ....." 1rem
+  /2rem 3fr 1.6fr 2rem;  
   display:grid;
-  gap:30px;
+  gap:3rem 0;
+
+  img{
+    width:100%;
+  }
 }
 
 #section-top{
   grid-area:sec-top;
+  display:flex;
+  gap:0 1rem;
 }
 
 #section1{
@@ -77,7 +89,35 @@ main{
 
 aside{
   grid-area:aside;
+  margin:1rem auto auto 2rem;
+  display:grid;
+  row-gap:2.5rem;
+  justify-items:center;
+  h2{
+    text-align: center;
+  }
 }
+
+#aside-section1{
+  >div{
+    margin:1.5rem;
+    display:grid;
+    place-items: center;
+  }
+  img{
+    width:50%;
+    border-radius:50%;
+  }
+}
+
+#aside-section3{
+  p{
+    margin:1.5rem;
+  }
+  
+}
+
+
 
 
 
