header ,main,asideの余白調整完了

--- a/自作その４/css/style.SCSS
+++ b/自作その４/css/style.SCSS
@@ -1,14 +1,20 @@
-@use "../../../default_mixin_setting/_main_mixin";
+@use "../../../default_mixin_setting/_main_mixin" as *;
 
 body{
   font-size:1rem;
   min-height:100vh;
   display:grid;
   grid-template:
-  ".... .... ...." 10px
-  "head head head" 
-  "main main main" 2fr
-  "foot foot foot" ; 
+  " head head head head" 
+  ".... ....  .... ...." 3rem
+  ".... main aside ...." 
+  ".... foot foot  ...."
+  /2rem 2fr 1fr 2rem;
+    
+  @include space-setting(0,0);
+  img{
+    width:100%;
+  }
 }
 
 h2{
@@ -19,16 +25,19 @@ header{
   grid-area:head;
   display:grid;
   grid-template:
-  "logo logo logo"
-  "navi  navi  navi ";
-  gap:20px;
+  ".... logo    logo"
+  "navi navi    navi"
+  ".... ....    ...." 1.5rem
+  ".... sec-top ...."
+  /2rem 1fr 2rem;
+  row-gap:1rem;
+  margin-top:1rem;
 
   > a{
     font-size:1.90rem;
     grid-area:logo;
     text-decoration:none;
     color:black;
-    margin-left:30px;
   }
 
   a{
@@ -50,30 +59,17 @@ header{
   }
 }
 
-
-main{
-  grid-area:main;
-  grid-template:
-  "..... .....   .....   ....." 1.5rem
-  "..... sec-top sec-top ....."
-  "..... sec1    aside   ....."
-  "..... sec2    aside   ....."
-  "..... sec3    aside   ....."
-  "..... .....   .....   ....." 1rem
-  /2rem 3fr 1.6fr 2rem;  
-  display:grid;
-  gap:3rem 0;
-
-  img{
-    width:100%;
-  }
-}
-
 #section-top{
   grid-area:sec-top;
   display:flex;
-  gap:0 1rem;
+  column-gap:1.5rem;
 }
+
+main{
+  grid-area:main;
+}
+
+
 
 #section1{
   grid-area:sec1;
@@ -89,19 +85,32 @@ main{
 
 aside{
   grid-area:aside;
-  margin:1rem auto auto 2rem;
   display:grid;
-  row-gap:2.5rem;
-  justify-items:center;
+  margin:2rem 0 2rem 2rem;
+  row-gap:2rem;
+  font-size:0.9rem;
+  h2,p{
+    margin:0;
+  }
+
   h2{
     text-align: center;
   }
+
+  p{
+    margin-bottom:1rem;
+  }
+}
+
+#aside-section1,#aside-section2,#aside-section3{
+  display:grid;
+  row-gap:1rem;
 }
 
 #aside-section1{
   >div{
-    margin:1.5rem;
     display:grid;
+    row-gap:1rem;
     place-items: center;
   }
   img{
@@ -112,14 +121,19 @@ aside{
 
 #aside-section3{
   p{
-    margin:1.5rem;
+    @include space-setting(0,1rem);
   }
-  
+
+
+  #first-border{
+    border-top:1px solid black;
+    border-bottom:1px solid black;
+  }
+
+  .others-border{
+    border-bottom:1px solid black;
+  }
 }
-
-
-
-
 
 
 
