--- a/自作その3/css/copy_coding.SCSS
+++ b/自作その3/css/copy_coding.SCSS
@@ -52,10 +52,15 @@ nav{
   justify-content:center;
   align-items:center;
 
-  img{
+
+  .menu{
+    display:flex;
+
+    img{
   width:20px;
-  vertical-align: sub;
   }
+  }
+  
 }
 
 #header-img{
@@ -152,13 +157,13 @@ h1{
   }
 
   #News-first-dr,#News-first-dt{
-    border-top:solid 1px black;
-    border-bottom:solid 1px black;
+    border-top:solid 1px rgb(242, 231, 231);
+    border-bottom:solid 1px rgb(242, 231, 231);
   }
 
   .News-dr,.News-dt{
     width:20%;
-    border-bottom:solid 1px black;
+    border-bottom:solid 1px rgb(242, 231, 231);
     padding:15px;
   }
 
