--- a/自作その４/css/style.SCSS.css
+++ b/自作その４/css/style.SCSS.css
@@ -10,7 +10,7 @@ body {
   font-size: 1rem;
   min-height: 100vh;
   display: grid;
-  grid-template: " head  head   head   head  " "....   ....   ....   ....  " 3rem "....   main   aside  ....  " "....   ....   ....   ....  " 3rem "foot   foot   foot   foot  " "copy-r copy-r copy-r copy-r"/2rem 2fr 1fr 2rem;
+  grid-template: "head  head   head     head " "....   ....    ....    ....  " 3rem "....   sec-top sec-top ....  " "....   main    aside   ....  " "....   ....    ....    ....  " 3rem "foot   foot    foot    foot  " "....   copy-r  copy-r  copy-r"/3rem 2.5fr 1fr 3rem;
   margin: 0;
   padding: 0;
 }
@@ -41,7 +41,7 @@ h2 {
 header {
   grid-area: head;
   display: grid;
-  grid-template: ".... logo    logo" "navi navi    navi" ".... ....    ...." 1.5rem ".... sec-top ...."/2rem 1fr 2rem;
+  grid-template: ".... logo    logo" "navi navi    navi" ".... ....    ...." 1.5rem/2rem 1fr 2rem;
   row-gap: 1rem;
   margin-top: 1rem;
 }
@@ -76,7 +76,7 @@ header nav > a {
 
 main {
   grid-area: main;
-  margin-bottom: 15rem;
+  margin: 0 1rem 15rem 0;
 }
 main .main-text {
   margin: 2rem;
@@ -141,8 +141,8 @@ footer, #copy-right {
 
 footer {
   grid-area: foot;
-  margin: 4rem 0 0 0;
-  padding: 2rem;
+  margin: 3rem 0 0 0;
+  padding: 3rem;
   display: flex;
   justify-content: space-between;
   gap: 1rem;
@@ -172,5 +172,13 @@ footer h2 {
   margin: 0;
   text-align: center;
   font-size: 0.8rem;
+}
+
+.twitter-timeline {
+  width: 100%;
+  height: 300px;
+  overflow: auto;
+  display: flex;
+  border-radius: 10%;
 }
 /*# sourceMappingURL=style.SCSS.css.map */
