--- a/自作その４/css/style.SCSS.css
+++ b/自作その４/css/style.SCSS.css
@@ -10,7 +10,7 @@ body {
   font-size: 1rem;
   min-height: 100vh;
   display: grid;
-  grid-template: "head  head   head     head " "....   ....    ....    ....  " 3rem "....   sec-top sec-top ....  " "....   main    aside   ....  " "....   ....    ....    ....  " 3rem "foot   foot    foot    foot  " "....   copy-r  copy-r  copy-r"/3rem 2.5fr 1fr 3rem;
+  grid-template: "head  head   head     head " "....   ....    ....    ....  " 3rem "....   sec-top sec-top ....  " "....   main    aside   ....  " "....   ....    ....    ....  " 3rem "foot   foot    foot    foot  " "copy-r copy-r  copy-r  copy-r"/3rem 2.5fr 1fr 3rem;
   margin: 0;
   padding: 0;
 }
@@ -22,12 +22,14 @@ body .a-block {
 }
 body #first-border {
   padding: 1.5rem;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  padding-left: 0;
+  border-top: 1px solid #d5d0d0;
+  border-bottom: 1px solid #d5d0d0;
 }
 body .others-border {
   padding: 1.5rem;
-  border-bottom: 1px solid black;
+  padding-left: 0;
+  border-bottom: 1px solid #d5d0d0;
 }
 body a {
   text-decoration: none;
@@ -41,26 +43,21 @@ h2 {
 header {
   grid-area: head;
   display: grid;
-  grid-template: ".... logo    logo" "navi navi    navi" ".... ....    ...." 1.5rem/2rem 1fr 2rem;
+  grid-template: ".... logo logo" "navi navi navi" ".... .... ...." 1.5rem/4rem 1fr 2rem;
   row-gap: 1rem;
   margin-top: 1rem;
 }
 header > a {
   font-size: 1.9rem;
   grid-area: logo;
-}
-header nav {
-  position: relative;
-}
-header a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 header nav {
   grid-area: navi;
   background-color: #333333;
-  padding: 10px 0 10px 30px;
+  padding: 1rem 0 1rem 4rem;
   display: flex;
-  gap: 1.5rem;
+  gap: 3rem;
 }
 header nav > a {
   color: white;
@@ -170,15 +167,8 @@ footer h2 {
 #copy-right {
   grid-area: copy-r;
   margin: 0;
+  padding: 1rem;
   text-align: center;
   font-size: 0.8rem;
-}
-
-.twitter-timeline {
-  width: 100%;
-  height: 300px;
-  overflow: auto;
-  display: flex;
-  border-radius: 10%;
 }
 /*# sourceMappingURL=style.SCSS.css.map */
