--- a/自作その４/css/style.SCSS.css
+++ b/自作その４/css/style.SCSS.css
@@ -16,7 +16,7 @@ body {
   padding: 0;
 }
 body img {
-  width: 100%;
+  max-width: 100%;
 }
 body .a-block {
   display: block;
@@ -125,7 +125,7 @@ aside p {
   place-items: center;
 }
 #aside-section1 img {
-  width: 50%;
+  max-width: 50%;
   border-radius: 50%;
 }
 
@@ -175,9 +175,12 @@ footer h2 {
 
 @media screen and (max-width: 767px) {
   body {
-    min-width: 30vh;
+    min-width: 300px;
     display: grid;
     grid-template: "head   " "....   " 1rem "sec-top" "....   " 2rem "main   " "....   " 2rem "aside  " "....   " 2rem "foot   " "copy-r";
+  }
+  h2 {
+    font-size: 1rem;
   }
   #section-top, header, main, aside {
     margin: 0 1rem;
@@ -205,6 +208,23 @@ footer h2 {
   }
   footer section {
     width: 100%;
+  }
+}
+@media screen and (max-width: 767px) and (max-width: 600px) {
+  body {
+    font-size: 0.9rem;
+  }
+  body img {
+    min-width: 300px;
+  }
+  header nav {
+    gap: 1rem;
+  }
+  header nav > a {
+    font-size: 0.8rem;
+  }
+  aside {
+    font-size: 0.9rem;
   }
 }
 /*# sourceMappingURL=style.SCSS.css.map */
