作成中断。自作６へ

--- a/自作その5/css/style.SCSS
+++ b/自作その5/css/style.SCSS
@@ -21,9 +21,17 @@ header{
         // ハンバーガー、検索フォームのCSS
         &:nth-of-type(1){
           display:flex;
-          justify-content:flex-start;
-          .form-control{
-            width:70%;
+          justify-content:center;
+          transform:scale(1.2);
+
+          form{
+            display:flex;
+            position:relative;
+          }
+          
+          .bi-search{
+            position:absolute;
+            right:10px;
           }
         }
 
