--- a/自作その5/css/style.SCSS.css
+++ b/自作その5/css/style.SCSS.css
@@ -28,10 +28,16 @@ header > .head-sec div {
 }
 header > .head-sec div:nth-of-type(1) {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  transform: scale(1.2);
 }
-header > .head-sec div:nth-of-type(1) .form-control {
-  width: 70%;
+header > .head-sec div:nth-of-type(1) form {
+  display: flex;
+  position: relative;
+}
+header > .head-sec div:nth-of-type(1) .bi-search {
+  position: absolute;
+  right: 10px;
 }
 header > .head-sec div:nth-of-type(2) {
   margin: auto 2rem;
