--- a/自作その６/css/style.SCSS
+++ b/自作その６/css/style.SCSS
@@ -1,3 +1,44 @@
-h1{
-  color:black;
+
+
+header{
+  margin:30px;
+  display:flex;
+  justify-content:space-between;
+
+
+  > a{
+    display:block;
+  }
+  #menu-bar{
+  height:30px;
+  position:relative;
+    width:30px;
+  // バーの装飾
+  div{
+    position:absolute;
+    width:30px;
+    border:1px solid black;
+    // 上側のバー
+    &:nth-of-type(1){
+      border-top:2px solid black;
+      top:10px;
+    }
+  
+    // 下側のバー
+    &:nth-of-type(2){
+      border-bottom:2px solid black;
+      bottom:10px;
+    }
+  }
+}
+
+  nav{
+    display:none;
+  }
+
+
+
+  
+
+
 }
