--- a/自作その６/css/style.SCSS.css
+++ b/自作その６/css/style.SCSS.css
@@ -1,4 +1,30 @@
-h1 {
-  color: black;
+header {
+  margin: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+header > a {
+  display: block;
+}
+header #menu-bar {
+  height: 30px;
+  position: relative;
+  width: 30px;
+}
+header #menu-bar div {
+  position: absolute;
+  width: 30px;
+  border: 1px solid black;
+}
+header #menu-bar div:nth-of-type(1) {
+  border-top: 2px solid black;
+  top: 10px;
+}
+header #menu-bar div:nth-of-type(2) {
+  border-bottom: 2px solid black;
+  bottom: 10px;
+}
+header nav {
+  display: none;
 }
 /*# sourceMappingURL=style.SCSS.css.map */
