--- a/自作その６/css/style.SCSS.css
+++ b/自作その６/css/style.SCSS.css
@@ -1,30 +1,68 @@
+@charset "UTF-8";
+/*body用のgirdレイアウト*/
+.body-grid {
+  display: grid;
+  grid-template: "head" "main" "foot";
+  min-height: 100vh;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
 header {
   margin: 30px;
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 header > a {
   display: block;
 }
-header #menu-bar {
+header .menu-bar {
   height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
   position: relative;
-  width: 30px;
 }
-header #menu-bar div {
+header .menu-bar div {
   position: absolute;
+  z-index: 30;
   width: 30px;
+  transition: all 0.5s ease;
   border: 1px solid black;
 }
-header #menu-bar div:nth-of-type(1) {
-  border-top: 2px solid black;
+header .menu-bar div:nth-of-type(1) {
   top: 10px;
 }
-header #menu-bar div:nth-of-type(2) {
-  border-bottom: 2px solid black;
+header .menu-bar div:nth-of-type(2) {
   bottom: 10px;
 }
-header nav {
+header .nav-back, header nav {
+  position: fixed;
+}
+header .nav-back {
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0.8;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
   display: none;
+}
+header nav {
+  display: flex;
+  flex-direction: column;
+  top: 30px;
+  left: 30px;
+  z-index: 20;
+  display: none;
+}
+header nav a {
+  text-decoration: none;
+  color: white;
 }
 /*# sourceMappingURL=style.SCSS.css.map */
