--- a/自作その６/css/style.SCSS
+++ b/自作その６/css/style.SCSS
@@ -8,6 +8,7 @@ header{
   margin:30px;
   display:flex;
   justify-content:space-between;
+  align-items: center;
   position:relative;
 
 
@@ -15,11 +16,13 @@ header{
     display:block;
   }
   .menu-bar{
-  height:30px;
+    height:30px;
     width:30px;
+    @include space-setting(10px,10px);
     display:flex;
     justify-content:center;
     position:relative;
+    z-index:30;
   // バーの装飾
     div{
     position:absolute;
@@ -28,38 +31,49 @@ header{
     transition:all 0.5s ease;
     // メニュー非表示のCSS
     border:1px solid black;
-    // メニュー表示時のCSS
-    // border:1px solid white;
+
+      //メニュー表示時のCSS 
+      &.nav-close{
+        border:1px solid white;
+      }
+
+    
     
     // 上側のバー
     &:nth-of-type(1){
       // メニュー非表示のCSS
-      // border-top:1px solid black;
-      top:10px;
+      top:20px;
 
-      //メニュー表示時のCSS 
-      // border-top:1px solid white;
-      // top:50%;
-      // transform:rotate(45deg);
-      
+    
+      &.nav-close-1{
+        transform:rotate(45deg);
+        top:50%;
+      }
     }
   
     // 下側のバー
     &:nth-of-type(2){
       // メニュー非表示のCSS
-      // border-bottom:1px solid black;
-      bottom:10px;
+      bottom:20px;
 
       // メニュー表示時のCSS
-      // border-bottom:1px solid white;
-      // top:50%;
-      // transform:rotate(-45deg);
+      &.nav-close-2{
+        transform:rotate(-45deg);
+        top:50%;
+        bottom:auto;
+      }
+      
     }
   }
 }
 
   .nav-back,nav{
     position:fixed;
+
+    // JS経由で制御するCSS
+    &.nav-open{
+      transform:translateX(0);
+    }
   }
 
   .nav-back{
@@ -70,18 +84,24 @@ header{
     width:100%;
     height:100%;
     z-index:10;
-    
-    display:none;
+    transform:translateX(200%);
+    transition:all 0.5s ease;
+    // display:none;
   }
   
   nav{
+    // 挙動の確認用のCSS
     display:flex;
     flex-direction:column;
     top:30px;
     left:30px;
     z-index:20;
-    display:none;
-    // transform:translateX(-200%);
+    transform:translateY(-200%);
+    transition:all 0.7s ease;
+    // display:none;
+
+    
+    
     a{
       text-decoration:none;
       color:white;
