--- a/自作その６/css/style.SCSS.css
+++ b/自作その６/css/style.SCSS.css
@@ -15,6 +15,7 @@ header {
   margin: 30px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: relative;
 }
 header > a {
@@ -23,9 +24,12 @@ header > a {
 header .menu-bar {
   height: 30px;
   width: 30px;
+  margin: 10px;
+  padding: 10px;
   display: flex;
   justify-content: center;
   position: relative;
+  z-index: 30;
 }
 header .menu-bar div {
   position: absolute;
@@ -34,14 +38,29 @@ header .menu-bar div {
   transition: all 0.5s ease;
   border: 1px solid black;
 }
+header .menu-bar div.nav-close {
+  border: 1px solid white;
+}
 header .menu-bar div:nth-of-type(1) {
-  top: 10px;
+  top: 20px;
+}
+header .menu-bar div:nth-of-type(1).nav-close-1 {
+  transform: rotate(45deg);
+  top: 50%;
 }
 header .menu-bar div:nth-of-type(2) {
-  bottom: 10px;
+  bottom: 20px;
+}
+header .menu-bar div:nth-of-type(2).nav-close-2 {
+  transform: rotate(-45deg);
+  top: 50%;
+  bottom: auto;
 }
 header .nav-back, header nav {
   position: fixed;
+}
+header .nav-back.nav-open, header nav.nav-open {
+  transform: translateX(0);
 }
 header .nav-back {
   top: 0;
@@ -51,7 +70,8 @@ header .nav-back {
   width: 100%;
   height: 100%;
   z-index: 10;
-  display: none;
+  transform: translateX(200%);
+  transition: all 0.5s ease;
 }
 header nav {
   display: flex;
@@ -59,7 +79,8 @@ header nav {
   top: 30px;
   left: 30px;
   z-index: 20;
-  display: none;
+  transform: translateY(-200%);
+  transition: all 0.7s ease;
 }
 header nav a {
   text-decoration: none;
